Update 21-05-2022 functional version

--- a/notebooks/Description.ipynb
+++ b/notebooks/Description.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e0fbaae5",
+   "execution_count": 10,
+   "id": "6dacc77c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98a98413",
+   "id": "6c467ca8",
    "metadata": {},
    "source": [
     "# Rising Food Prices and Poverty in Latin America and the Caribbean:\n",
@@ -119,6 +119,46 @@
     "\n",
     "\n",
     "\n",
+    "## Results\n",
+    "\n",
+    "For the main simulation an increase of 20% in the poverty line was used in line with the most recent forecasts from the FAO. Using this stimate the result is a **{NUMBER}** increase in the poverty rate of the region. Some countries actually lower their poverty rate due to the macroeconomic growth effect. \n",
+    "\n",
+    "\n",
+    "<table><tr>\n",
+    "<td> \n",
+    "  <p align=\"center\" style=\"padding: 10px\">\n",
+    "    <img alt=\"Forwarding\" src=\"assets/simulation_all_no_meat.png\" width=\"400\">\n",
+    "    <br>\n",
+    "    <em style=\"color: grey\">Simulation of all commodities (except meat)</em>\n",
+    "  </p> \n",
+    "</td>\n",
+    "}</tr></table>\n",
+    "\n",
+    "## Results\n",
+    "\n",
+    "Food prices and supply chain has been disrupted since the start of the pandemic. But with the war in Ukraine, the world is expecting to see a large increase in food prices, particularly affecting low and low-middle income countries. The simulation using household surveys data reflects that additional individuals could potentially fall under the new poverty line, ranging from **{MINIMUM}** and **{MAXIMUM}** percentual points.  Moreover, we expect that the number of poor would increase by **{MINIMUM}**% and **{MAXIMUM}**%.\n",
+    "\n",
+    "\n",
+    "The simulation shows that food prices increases will likely have a moderate impact on poverty. Therefore, targeting social protection programs for individuals falling under the new poverty line, and country-specific food prices policies, among other measures, is important to minimize the impact. Some examples are food coupons for the most vulnerable populations. However, further research is needed to understand the cost-benefit ratio of these policy responses.   \n",
+    "\n",
+    "\n",
+    "## [References](references) \n",
+    "\n",
+    "- Artuc, Erhan; Porto, Guido; Rijkers, Bob. 2019. Household Impacts of Tariffs : Data and Results from Agricultural Trade Protection. Policy Research Working Paper;No. 9045. World Bank, Washington, DC. © World Bank. https://openknowledge.worldbank.org/handle/10986/33015 License: CC BY 3.0 IGO.” \n",
+    "- CEPAL. Medición de la pobreza por ingresos. Actualización de metodología y resultados. 2018;https://www.cepal.org/es/publicaciones/44314-medicion-la-pobreza-ingresos-actualizacion-metodologica-resultados \n",
+    "- Food and Agriculture Organization of the united Nations -FAO. World Food Situation. April 7, 2022. https://www.fao.org/worldfoodsituation/foodpricesindex/en/  \n",
+    "- Laborde, D., Lakatos, C., & Martin, W. J. (2019). Poverty impact of food price shocks and policies (Ser. World bank e-library). World Bank. Retrieved April 7, 2022, from http://elibrary.worldbank.org/doi/book/10.1596/1813-9450-8724. \n",
+    "- Schmidt, E, Dorosh, P, & Gilbert, R. Impacts of COVID-19 induced income and rice price shocks on household welfare in Papua New Guinea: Household model estimates. Agricultural Economics. 2021; 52: 391– 406. https://doi.org/10.1111/agec.12625 \n",
+    "- ALNAP. 2008. The Global Food Price Crisis: Lessons and Ideas for Relief Planners and Managers. \n",
+    "- IFPRI. 2010. Reflections on the Global Food Crisis How has it hurt? How did it happen? And how can we prevent the next one? Research monograph 165\n",
+    "- de Hoyos, R.E. and Medvedev, D. (2011), Poverty Effects of Higher Food Prices: A Global Perspective. Review of Development Economics, 15: 387-402. https://doi.org/10.1111/j.1467-9361.2011.00615.x\n",
+    "- Food and Agriculture Organization of the united Nations. 2022. Information Note. The importance of Ukraine and the Russian Federation for global agricultural markets and the risks associated with the current conflict. Rome. https://www.fao.org/fileadmin/user_upload/faoweb/2022/Info-Note-Ukraine-Russian-Federation.pdf\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Annex\n",
+    "\n",
     "\n",
     "#### Simulation Components \n",
     "\n",
@@ -148,53 +188,6 @@
     "shock_population = {'sec_agri': 0}\n",
     "# In this example self-employed or independent workers in the agricultural sector will not be impacted by the Shock\n",
     "```\n",
-    "\n",
-    "## Results\n",
-    "\n",
-    "For the main simulation an increase of 20% in the poverty line was used in line with the most recent forecasts from the FAO. Using this stimate the result is a **{NUMBER}** increase in the poverty rate of the region. Some countries actually lower their poverty rate due to the macroeconomic growth effect. \n",
-    "\n",
-    "\n",
-    "<table><tr>\n",
-    "<td> \n",
-    "  <p align=\"center\" style=\"padding: 10px\">\n",
-    "    <img alt=\"Forwarding\" src=\"assets/simulation_all_no_meat.png\" width=\"400\">\n",
-    "    <br>\n",
-    "    <em style=\"color: grey\">Forwarding (Anahtarlama)</em>\n",
-    "  </p> \n",
-    "</td>\n",
-    "<td> \n",
-    "  <p align=\"center\">\n",
-    "    <img alt=\"Routing\" src=\"assets/simulation_grain_cereal.png\" width=\"400\">\n",
-    "    <br>\n",
-    "    <em style=\"color: grey\">Routing (yönlendirme)</em>\n",
-    "  </p> \n",
-    "</td>\n",
-    "</tr></table>\n",
-    "\n",
-    "## Results\n",
-    "\n",
-    "Food prices and supply chain has been disrupted since the start of the pandemic. But with the war in Ukraine, the world is expecting to see a large increase in food prices, particularly affecting low and low-middle income countries. The simulation using household surveys data reflects that additional individuals could potentially fall under the new poverty line, ranging from **{MINIMUM}** and **{MAXIMUM}** percentual points.  Moreover, we expect that the number of poor would increase by **{MINIMUM}**% and **{MAXIMUM}**%.\n",
-    "\n",
-    "\n",
-    "The simulation shows that food prices increases will likely have a moderate impact on poverty. Therefore, targeting social protection programs for individuals falling under the new poverty line, and country-specific food prices policies, among other measures, is important to minimize the impact. Some examples are food coupons for the most vulnerable populations. However, further research is needed to understand the cost-benefit ratio of these policy responses.   \n",
-    "\n",
-    "\n",
-    "## [References](references) \n",
-    "\n",
-    "- Artuc, Erhan; Porto, Guido; Rijkers, Bob. 2019. Household Impacts of Tariffs : Data and Results from Agricultural Trade Protection. Policy Research Working Paper;No. 9045. World Bank, Washington, DC. © World Bank. https://openknowledge.worldbank.org/handle/10986/33015 License: CC BY 3.0 IGO.” \n",
-    "- CEPAL. Medición de la pobreza por ingresos. Actualización de metodología y resultados. 2018;https://www.cepal.org/es/publicaciones/44314-medicion-la-pobreza-ingresos-actualizacion-metodologica-resultados \n",
-    "- Food and Agriculture Organization of the united Nations -FAO. World Food Situation. April 7, 2022. https://www.fao.org/worldfoodsituation/foodpricesindex/en/  \n",
-    "- Laborde, D., Lakatos, C., & Martin, W. J. (2019). Poverty impact of food price shocks and policies (Ser. World bank e-library). World Bank. Retrieved April 7, 2022, from http://elibrary.worldbank.org/doi/book/10.1596/1813-9450-8724. \n",
-    "- Schmidt, E, Dorosh, P, & Gilbert, R. Impacts of COVID-19 induced income and rice price shocks on household welfare in Papua New Guinea: Household model estimates. Agricultural Economics. 2021; 52: 391– 406. https://doi.org/10.1111/agec.12625 \n",
-    "- ALNAP. 2008. The Global Food Price Crisis: Lessons and Ideas for Relief Planners and Managers. \n",
-    "- IFPRI. 2010. Reflections on the Global Food Crisis How has it hurt? How did it happen? And how can we prevent the next one? Research monograph 165\n",
-    "- de Hoyos, R.E. and Medvedev, D. (2011), Poverty Effects of Higher Food Prices: A Global Perspective. Review of Development Economics, 15: 387-402. https://doi.org/10.1111/j.1467-9361.2011.00615.x\n",
-    "- Food and Agriculture Organization of the united Nations. 2022. Information Note. The importance of Ukraine and the Russian Federation for global agricultural markets and the risks associated with the current conflict. Rome. https://www.fao.org/fileadmin/user_upload/faoweb/2022/Info-Note-Ukraine-Russian-Federation.pdf\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Annex\n",
     "\n",
     "#### <center>Table 1</center>\n",
     "\n",
@@ -233,13 +226,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd6bad9a",
+   "id": "a8388ee9",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "98254fea",
+   "id": "7436afb9",
    "metadata": {},
    "source": [
     "## Context\n",
@@ -249,8 +242,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a416ba26",
+   "execution_count": 11,
+   "id": "c42ab1d9",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +278,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b6543a0",
+   "id": "0c6fdf52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b942f094",
    "metadata": {},
    "outputs": [],
    "source": []
