remove additional files

--- a/source/scldata_policy_simulation.ipynb
+++ b/source/scldata_policy_simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "55ac11e4",
+   "id": "014edf2c",
    "metadata": {},
    "source": [
     "# Rising Food Prices and Poverty in Latin America and the Caribbean:\n",
@@ -11,8 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0d966696",
+   "execution_count": 2,
+   "id": "ba211208",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +23,455 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "146e5452",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>indicator</th>\n",
+       "      <th>index</th>\n",
+       "      <th>anio_c</th>\n",
+       "      <th>pais_c</th>\n",
+       "      <th>cpi</th>\n",
+       "      <th>cpi_2011</th>\n",
+       "      <th>lp19_2011</th>\n",
+       "      <th>lp31_2011</th>\n",
+       "      <th>lp5_2011</th>\n",
+       "      <th>ppp_2011</th>\n",
+       "      <th>tc_wdi</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>ARG</td>\n",
+       "      <td>0.745</td>\n",
+       "      <td>71.430</td>\n",
+       "      <td>1.905</td>\n",
+       "      <td>3.108</td>\n",
+       "      <td>5.013</td>\n",
+       "      <td>3.161</td>\n",
+       "      <td>0.042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>BHS</td>\n",
+       "      <td>56.138</td>\n",
+       "      <td>96.546</td>\n",
+       "      <td>37.812</td>\n",
+       "      <td>61.693</td>\n",
+       "      <td>99.506</td>\n",
+       "      <td>1.125</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>BLZ</td>\n",
+       "      <td>60.460</td>\n",
+       "      <td>95.642</td>\n",
+       "      <td>42.891</td>\n",
+       "      <td>69.979</td>\n",
+       "      <td>112.870</td>\n",
+       "      <td>1.174</td>\n",
+       "      <td>2.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>BOL</td>\n",
+       "      <td>15.855</td>\n",
+       "      <td>76.640</td>\n",
+       "      <td>34.564</td>\n",
+       "      <td>56.394</td>\n",
+       "      <td>90.959</td>\n",
+       "      <td>2.891</td>\n",
+       "      <td>2.692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>BRA</td>\n",
+       "      <td>6011358.878</td>\n",
+       "      <td>21900000000000.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.651</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "indicator  index  anio_c pais_c         cpi           cpi_2011  lp19_2011  \\\n",
+       "0              0    1989    ARG       0.745             71.430      1.905   \n",
+       "1              1    1989    BHS      56.138             96.546     37.812   \n",
+       "2              2    1989    BLZ      60.460             95.642     42.891   \n",
+       "3              3    1989    BOL      15.855             76.640     34.564   \n",
+       "4              4    1989    BRA 6011358.878 21900000000000.000      0.000   \n",
+       "\n",
+       "indicator  lp31_2011  lp5_2011  ppp_2011  tc_wdi  \n",
+       "0              3.108     5.013     3.161   0.042  \n",
+       "1             61.693    99.506     1.125   1.000  \n",
+       "2             69.979   112.870     1.174   2.000  \n",
+       "3             56.394    90.959     2.891   2.692  \n",
+       "4              0.000     0.000     1.651   0.000  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "povertyline = \"Data Projects/International Poverty Lines/international_poverty_lines.csv\"\n",
+    "pl          = pd.read_csv(f'{scldatalake}/{povertyline}')\n",
+    "\n",
+    "# Reshape long to wide \n",
+    "index = ['year','isoalpha3']\n",
+    "pl = pl.pivot_table(index = index, columns = 'indicator', values = 'value').reset_index()\n",
+    "pl = pl.reset_index()\n",
+    "pl = pl.drop(columns = ['ppp_wdi2011'])\n",
+    "pl = pl.rename(columns = {'isoalpha3':'code'})\n",
+    "\n",
+    "# CPI 2011 = 100\n",
+    "pl['cpi_2011' ] = [pl[(pl.code == x) & (pl.year == 2011)].cpi.item() for x in pl.code]\n",
+    "\n",
+    "# Rename variables for merge \n",
+    "pl.rename(columns = {'code':'pais_c', 'year':'anio_c'}, inplace = True)\n",
+    "pl.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a0fe90cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>indicator</th>\n",
+       "      <th>index</th>\n",
+       "      <th>anio_c</th>\n",
+       "      <th>pais_c</th>\n",
+       "      <th>cpi</th>\n",
+       "      <th>cpi_2011</th>\n",
+       "      <th>lp19_2011</th>\n",
+       "      <th>lp31_2011</th>\n",
+       "      <th>lp5_2011</th>\n",
+       "      <th>ppp_2011</th>\n",
+       "      <th>tc_wdi</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>ARG</td>\n",
+       "      <td>0.745</td>\n",
+       "      <td>71.430</td>\n",
+       "      <td>1.905</td>\n",
+       "      <td>3.108</td>\n",
+       "      <td>5.013</td>\n",
+       "      <td>3.161</td>\n",
+       "      <td>0.042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>BHS</td>\n",
+       "      <td>56.138</td>\n",
+       "      <td>96.546</td>\n",
+       "      <td>37.812</td>\n",
+       "      <td>61.693</td>\n",
+       "      <td>99.506</td>\n",
+       "      <td>1.125</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>BLZ</td>\n",
+       "      <td>60.460</td>\n",
+       "      <td>95.642</td>\n",
+       "      <td>42.891</td>\n",
+       "      <td>69.979</td>\n",
+       "      <td>112.870</td>\n",
+       "      <td>1.174</td>\n",
+       "      <td>2.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>BOL</td>\n",
+       "      <td>15.855</td>\n",
+       "      <td>76.640</td>\n",
+       "      <td>34.564</td>\n",
+       "      <td>56.394</td>\n",
+       "      <td>90.959</td>\n",
+       "      <td>2.891</td>\n",
+       "      <td>2.692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>BRA</td>\n",
+       "      <td>6011358.878</td>\n",
+       "      <td>21884097039589.602</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.651</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "indicator  index  anio_c pais_c         cpi           cpi_2011  lp19_2011  \\\n",
+       "0              0    1989    ARG       0.745             71.430      1.905   \n",
+       "1              1    1989    BHS      56.138             96.546     37.812   \n",
+       "2              2    1989    BLZ      60.460             95.642     42.891   \n",
+       "3              3    1989    BOL      15.855             76.640     34.564   \n",
+       "4              4    1989    BRA 6011358.878 21884097039589.602      0.000   \n",
+       "\n",
+       "indicator  lp31_2011  lp5_2011  ppp_2011  tc_wdi  \n",
+       "0              3.108     5.013     3.161   0.042  \n",
+       "1             61.693    99.506     1.125   1.000  \n",
+       "2             69.979   112.870     1.174   2.000  \n",
+       "3             56.394    90.959     2.891   2.692  \n",
+       "4              0.000     0.000     1.651   0.000  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "povertyline = \"Data Projects/International Poverty Lines/International_Poverty_Lines_LAC.csv\"\n",
+    "pl          = pd.read_csv(f'{scldatalake}/{povertyline}')\n",
+    "\n",
+    "# Reshape long to wide \n",
+    "index = ['year','isoalpha3']\n",
+    "pl = pl.pivot_table(index = index, columns = 'indicator', values = 'value').reset_index()\n",
+    "pl = pl.reset_index()\n",
+    "pl = pl.drop(columns = ['ppp_wdi2011'])\n",
+    "pl = pl.rename(columns = {'isoalpha3':'code'})\n",
+    "\n",
+    "# CPI 2011 = 100\n",
+    "pl['cpi_2011' ] = [pl[(pl.code == x) & (pl.year == 2011)].cpi.item() for x in pl.code]\n",
+    "\n",
+    "# Rename variables for merge \n",
+    "pl.rename(columns = {'code':'pais_c', 'year':'anio_c'}, inplace = True)\n",
+    "pl.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c984c170",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>indicator</th>\n",
+       "      <th>index</th>\n",
+       "      <th>anio_c</th>\n",
+       "      <th>pais_c</th>\n",
+       "      <th>cpi</th>\n",
+       "      <th>cpi_2011</th>\n",
+       "      <th>lp19_2011</th>\n",
+       "      <th>lp31_2011</th>\n",
+       "      <th>lp5_2011</th>\n",
+       "      <th>ppp_2011</th>\n",
+       "      <th>tc_wdi</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>710</th>\n",
+       "      <td>710</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>CRI</td>\n",
+       "      <td>92.954</td>\n",
+       "      <td>80.248</td>\n",
+       "      <td>23390.018</td>\n",
+       "      <td>38162.660</td>\n",
+       "      <td>61552.676</td>\n",
+       "      <td>349.407</td>\n",
+       "      <td>544.739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>736</th>\n",
+       "      <td>736</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>CRI</td>\n",
+       "      <td>94.465</td>\n",
+       "      <td>80.248</td>\n",
+       "      <td>23770.230</td>\n",
+       "      <td>38783.008</td>\n",
+       "      <td>62553.234</td>\n",
+       "      <td>349.407</td>\n",
+       "      <td>567.513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>762</th>\n",
+       "      <td>762</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>CRI</td>\n",
+       "      <td>96.562</td>\n",
+       "      <td>80.248</td>\n",
+       "      <td>24297.898</td>\n",
+       "      <td>39643.938</td>\n",
+       "      <td>63941.836</td>\n",
+       "      <td>349.407</td>\n",
+       "      <td>576.972</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>788</th>\n",
+       "      <td>788</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>CRI</td>\n",
+       "      <td>98.588</td>\n",
+       "      <td>80.248</td>\n",
+       "      <td>24807.701</td>\n",
+       "      <td>40475.723</td>\n",
+       "      <td>65283.422</td>\n",
+       "      <td>349.407</td>\n",
+       "      <td>587.295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>814</th>\n",
+       "      <td>814</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>CRI</td>\n",
+       "      <td>99.302</td>\n",
+       "      <td>80.248</td>\n",
+       "      <td>24987.365</td>\n",
+       "      <td>40768.859</td>\n",
+       "      <td>65756.227</td>\n",
+       "      <td>349.407</td>\n",
+       "      <td>584.901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>840</th>\n",
+       "      <td>840</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>CRI</td>\n",
+       "      <td>100.636</td>\n",
+       "      <td>80.248</td>\n",
+       "      <td>25323.039</td>\n",
+       "      <td>41316.539</td>\n",
+       "      <td>66639.578</td>\n",
+       "      <td>349.407</td>\n",
+       "      <td>620.785</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "indicator  index  anio_c pais_c     cpi  cpi_2011  lp19_2011  lp31_2011  \\\n",
+       "710          710    2016    CRI  92.954    80.248  23390.018  38162.660   \n",
+       "736          736    2017    CRI  94.465    80.248  23770.230  38783.008   \n",
+       "762          762    2018    CRI  96.562    80.248  24297.898  39643.938   \n",
+       "788          788    2019    CRI  98.588    80.248  24807.701  40475.723   \n",
+       "814          814    2020    CRI  99.302    80.248  24987.365  40768.859   \n",
+       "840          840    2021    CRI 100.636    80.248  25323.039  41316.539   \n",
+       "\n",
+       "indicator  lp5_2011  ppp_2011  tc_wdi  \n",
+       "710       61552.676   349.407 544.739  \n",
+       "736       62553.234   349.407 567.513  \n",
+       "762       63941.836   349.407 576.972  \n",
+       "788       65283.422   349.407 587.295  \n",
+       "814       65756.227   349.407 584.901  \n",
+       "840       66639.578   349.407 620.785  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pl[pl.pais_c=='CRI'].tail(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
-   "id": "2a8c61b3",
+   "id": "9fb4c0a4",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a1d85ea0",
+   "id": "465bc572",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7699b851",
+   "id": "3403c0d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fd88f65a",
+   "id": "934c4e90",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f1e0d8d3",
+   "id": "624178c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ce02916",
+   "id": "38790235",
    "metadata": {},
    "source": [
     "## Deltas by Country"
@@ -189,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bcc8e215",
+   "id": "ef3da660",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "270a2bc3",
+   "id": "1a607836",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d15b113f",
+   "id": "038050fa",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc42d007",
+   "id": "1c743f9d",
    "metadata": {},
    "source": [
     "## Distribution of poverty rate changes in percentual points by country"
@@ -296,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcd69a90",
+   "id": "32bfcbc5",
    "metadata": {},
    "source": [
     "Simulate impacts using a vector of scenarios to evaluate distributions."
@@ -304,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b249e4d7",
+   "id": "28b8ebab",
    "metadata": {},
    "source": [
     "#### Simulations for App"
@@ -313,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffc66390",
+   "id": "0177dc3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6befc95b",
+   "id": "ad53bd66",
    "metadata": {},
    "source": [
     "### Plot distribution"
@@ -377,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c144f5d2",
+   "id": "1b814beb",
    "metadata": {},
    "outputs": [
     {
