new updates function hnd

--- a/source/_misc/hnd-surveys-mision.ipynb
+++ b/source/_misc/hnd-surveys-mision.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9a32483a",
+   "id": "89421d2b",
    "metadata": {},
    "source": [
     "## Programa Presidencial “Bono Vida Mejor\" en sus Dominios Rural y Urbano\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "9455c9c2",
+   "id": "7c6cb203",
    "metadata": {},
    "source": [
     "<script>\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8cd6013a",
+   "id": "cd018816",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +46,13 @@
     "import random\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from dotenv import load_dotenv\n",
-    "\n"
+    "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2841b3e4",
+   "id": "cfbe282d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "78dd1eb1",
+   "execution_count": 3,
+   "id": "da935a72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,8 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "4d8a64fb",
+   "execution_count": 4,
+   "id": "c385b005",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2a9b382",
+   "id": "efd6bfc7",
    "metadata": {},
    "source": [
     "### Pobreza nacional"
@@ -98,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "bedcbe97",
+   "execution_count": 5,
+   "id": "eb68eac5",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f6b56d3",
+   "id": "ff5c0e23",
    "metadata": {},
    "source": [
     "### Simulador"
@@ -135,108 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "89988eae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 198,
-   "id": "b2dbe8d7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "poor_national\n",
-       "0.0    0.369657\n",
-       "1.0    0.630343\n",
-       "Name: factor_ci, dtype: float64"
-      ]
-     },
-     "execution_count": 198,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hh.groupby(\"poor_national\").factor_ci.sum()  / hh.groupby(\"poor_national\").factor_ci.sum().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
-   "id": "2f324960",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = simulacion(0, 0, [0], 100, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 200,
-   "id": "312d1c74",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "poor_national_new\n",
-       "0.0    0.369657\n",
-       "1.0    0.630343\n",
-       "Name: factor_ci, dtype: float64"
-      ]
-     },
-     "execution_count": 200,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result.groupby(\"poor_national_new\").factor_ci.sum()  / result.groupby(\"poor_national_new\").factor_ci.sum().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
-   "id": "4af1d745",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = simulacion(350000, 0.5, [335,200], 16, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 218,
-   "id": "c48c151c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "poor_national_new\n",
-       "0.0    0.375331\n",
-       "1.0    0.624669\n",
-       "Name: factor_ci, dtype: float64"
-      ]
-     },
-     "execution_count": 218,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result.groupby(\"poor_national_new\").factor_ci.sum()  / result.groupby(\"poor_national_new\").factor_ci.sum().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 221,
-   "id": "cdfe6463",
+   "execution_count": 27,
+   "id": "bf3d27ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,11 +186,19 @@
     "                    hh.loc[(hh.idh_ch == i[1]['idh_ch']) & (hh.idp_ci == i[1]['idp_ci']),'id_ben_urban'] = 1\n",
     "                if (iter_u +  i[1]['factor_ch']) >  nbenef_urban:\n",
     "                    break\n",
-    "                \n",
+    "         \n",
+    "        # Total beneficiarios \n",
+    "        hh['id_ben'] = np.where((hh.id_ben_rural == 1) | (hh.id_ben_urban == 1),1,0)\n",
+    "        \n",
     "        # Asignar transferencia\n",
     "        var_inc     = 'pc_ytot_ch_ofi_new'\n",
     "        hh[var_inc] = np.where(hh.id_ben_rural == 1, monto[0] / hh.nmiembros_ch, 0) + hh.pc_ytot_ch_ofi\n",
     "        hh[var_inc] = np.where(hh.id_ben_urban == 1, monto[1] / hh.nmiembros_ch, 0) + hh.pc_ytot_ch_ofi_new\n",
+    "        \n",
+    "        # Porcentjae del ingreso\n",
+    "        var_per     = 'pc_ytot_ch_perc'\n",
+    "        hh[var_per] = np.where(hh.id_ben_rural == 1, monto[0] / hh.pc_ytot_ch_ofi, np.nan)\n",
+    "        hh[var_per] = np.where(hh.id_ben_urban == 1, monto[1] / hh.pc_ytot_ch_ofi, hh.pc_ytot_ch_perc)\n",
     "        \n",
     "        # Identificar numero de individuos en pobreza \n",
     "        if pob_grupo == 1:\n",
@@ -312,11 +219,15 @@
     "                hh.loc[(hh.idh_ch == i[1]['idh_ch']) & (hh.idp_ci == i[1]['idp_ci']),'id_ben'] = 1\n",
     "            if (iter_ +  i[1]['factor_ch']) >  nbenef:\n",
     "                break  \n",
-    "    \n",
+    "                \n",
     "        # Asignar transferencia\n",
     "        var_inc     = 'pc_ytot_ch_ofi_new'\n",
     "        hh[var_inc] = np.where(hh.id_ben == 1, monto[0] / hh.nmiembros_ch, 0) + hh.pc_ytot_ch_ofi\n",
-    "    \n",
+    "        \n",
+    "        # Porcentjae del ingreso\n",
+    "        var_per     = 'pc_ytot_ch_perc'\n",
+    "        hh[var_per] = np.where(hh.id_ben == 1, monto[0] / hh.pc_ytot_ch_ofi, np.nan)\n",
+    "        \n",
     "        # Identificar numero de individuos en pobreza\n",
     "        if pob_grupo == 1:\n",
     "            var_pov     = 'poor_national_new'\n",
@@ -331,8 +242,110 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a96ae125",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_hnd[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "1839b8a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "poor_national\n",
+       "0.0    0.369657\n",
+       "1.0    0.630343\n",
+       "Name: factor_ci, dtype: float64"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hh.groupby(\"poor_national\").factor_ci.sum()  / hh.groupby(\"poor_national\").factor_ci.sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "9757891d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = simulacion(0, 0, [0], 100, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "6b874462",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "poor_national_new\n",
+       "0.0    0.369657\n",
+       "1.0    0.630343\n",
+       "Name: factor_ci, dtype: float64"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.groupby(\"poor_national_new\").factor_ci.sum()  / result.groupby(\"poor_national_new\").factor_ci.sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "id": "c47f7ae5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = simulacion(350000, 0.5, [335,200], 16, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "2fbe6d25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "poor_national_new\n",
+       "0.0    0.375331\n",
+       "1.0    0.624669\n",
+       "Name: factor_ci, dtype: float64"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.groupby(\"poor_national_new\").factor_ci.sum()  / result.groupby(\"poor_national_new\").factor_ci.sum().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "82e23253",
+   "id": "e54f8721",
    "metadata": {},
    "source": [
     "### Resultados"
@@ -340,11 +353,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1d5859b9",
+   "execution_count": 24,
+   "id": "b4bd1950",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import ipywidgets as widgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8f309422",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = simulacion(350000, 0.5, [335,200], 16, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "90958ca9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "poor_national_new\n",
+       "0.0    0.375331\n",
+       "1.0    0.624669\n",
+       "Name: factor_ci, dtype: float64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.groupby(\"poor_national_new\").factor_ci.sum()  / result.groupby(\"poor_national_new\").factor_ci.sum().sum()"
+   ]
   }
  ],
  "metadata": {
